--- a/PublicApi/Views/OpenGraph/BlogPost.cshtml
+++ b/PublicApi/Views/OpenGraph/BlogPost.cshtml
@@ -1,24 +1,29 @@
-﻿@model PublicApi.Infrastructure.IBlogPost
+﻿@model PublicApi.ViewModels.BlogPostViewModel
 
 <!DOCTYPE html>
 <html dir="ltr" prefix="og: http://ogp.me/ns#" style="width:100%; height:100%;">
     <head>
-        <meta charset="UTF-8" />
-        <meta property="og:title" content="@Html.DisplayFor(model => model.Title)" />
-        <meta property="og:description" content="@Html.DisplayFor(model => model.Description)" />
-        <meta property="og:image" content="@Html.DisplayFor(model => model.ImageUrl)" />
-        <meta property="og:url" content="@Html.DisplayFor(model => model.RelativeUrl)" />
+        <meta charset="UTF-8"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="@Html.DisplayFor(model => model.Title)"/>
+        <meta property="og:description" content="@Html.DisplayFor(model => model.Description)"/>
+        <meta property="og:image" content="@Html.DisplayFor(model => model.ImageUrl)"/>
+        <meta property="og:url" content="@Html.DisplayFor(model => model.CurrentUrl)"/>
         <meta name="twitter:card" content="summary_large_image">
         @if (!string.IsNullOrEmpty(Model.ImageDescriptionAlt))
         {
-            <meta name="twitter:image:alt" content=">@Html.DisplayFor(model => model.ImageDescriptionAlt)" />
+            <meta name="twitter:image:alt" content=">@Html.DisplayFor(model => model.ImageDescriptionAlt)"/>
         }
 
-        <meta name="description" content="@Html.DisplayFor(model => model.Description)" />
-        <meta name="author" content="@Html.DisplayFor(model => model.Author)">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <meta name="description" content="@Html.DisplayFor(model => model.Description)"/>
+        <meta name="author" content="@Html.DisplayFor(model => model.Author)"/>
         <title>@Html.DisplayFor(model => model.Title)</title>
     </head>
     <body style="margin: 0; padding: 0; width: 100%; height: 100%;">
-        <iframe src="@Html.DisplayFor(model => model.RelativeUrl)" style="width:100%; height:100%; border:0;"></iframe>
+        <script>
+            window.location.href = "@Html.DisplayFor(model => model.Url)";
+        </script>
+        <iframe src="@Html.DisplayFor(model => model.Url)" style="width:100%; height:100%; border:0;"></iframe>
     </body>
 </html>
